--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 html, body {
-	color: #333;
-}
-
-body {
 	background-color: #f1f1f1;
+	color: #333;
 }
 
 #wrapper {
@@ -11,7 +8,6 @@ body {
 	height: 600px;
 	margin: auto;
 	background-color: #f1f1f1;
-	
 	-moz-transition: box-shadow 0.5s ease 0s;
 	background-color: #FFFFFF;
 	border: 5px solid white;
@@ -22,15 +18,14 @@ body {
 
 #dataDisplay {
 	height: 550px;
-	/*padding: 5px;*/
+	font-family: monospace;
 	background-color: #f1f1f1;
 	overflow-x: hidden;
 	overflow-y: scroll;
-	/*overflow-y: scroll;*/
 }
 
 #messageinput {
-	padding: 5px;
+	padding-top: 5px;
 	width: 100%;
 	height: 50px;
 }
@@ -45,6 +40,6 @@ body {
 .msg1 {
 	width: 100%;
 	padding: 5px;
-	background-color: #d6d6d6;
+	background-color: #dedede;
 	word-wrap: break-word;
 }
